refactor: 가상 쓰레드를 활용해 보상 지급 로직 비동기 병렬 처리